feat(ical): fix lint in tests
